tests/dataset/tpc-ds/compiler/cpp/q25.error
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:90:8: error: redefinition of ‘struct StoreSale’
   90 | struct StoreSale {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:54:8: note: previous definition of ‘struct StoreSale’
   54 | struct StoreSale {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:98:8: error: redefinition of ‘struct StoreReturn’
   98 | struct StoreReturn {
      |        ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:62:8: note: previous definition of ‘struct StoreReturn’
   62 | struct StoreReturn {
      |        ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:105:8: error: redefinition of ‘struct CatalogSale’
  105 | struct CatalogSale {
      |        ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:69:8: note: previous definition of ‘struct CatalogSale’
   69 | struct CatalogSale {
      |        ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:111:8: error: redefinition of ‘struct DateDim’
  111 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:75:8: note: previous definition of ‘struct DateDim’
   75 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:116:8: error: redefinition of ‘struct Store’
  116 | struct Store {
      |        ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:80:8: note: previous definition of ‘struct Store’
   80 | struct Store {
      |        ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:121:8: error: redefinition of ‘struct Item’
  121 | struct Item {
      |        ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:85:8: note: previous definition of ‘struct Item’
   85 | struct Item {
      |        ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:127:12: error: ‘i’ was not declared in this scope
  127 |   decltype(i.i_item_id) item_id;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:127:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:128:12: error: ‘i’ was not declared in this scope
  128 |   decltype(i.i_item_desc) item_desc;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:128:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:129:12: error: ‘s’ was not declared in this scope
  129 |   decltype(s.s_store_id) s_store_id;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:129:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:130:12: error: ‘s’ was not declared in this scope
  130 |   decltype(s.s_store_name) s_store_name;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:130:12: error: ‘s’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:133:12: error: ‘ss’ was not declared in this scope
  133 |   decltype(ss) ss;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:133:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:134:12: error: ‘sr’ was not declared in this scope; did you mean ‘ss’?
  134 |   decltype(sr) sr;
      |            ^~
      |            ss
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:134:12: error: ‘sr’ was not declared in this scope; did you mean ‘ss’?
  134 |   decltype(sr) sr;
      |            ^~
      |            ss
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:135:12: error: ‘cs’ was not declared in this scope; did you mean ‘ss’?
  135 |   decltype(cs) cs;
      |            ^~
      |            ss
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:135:12: error: ‘cs’ was not declared in this scope; did you mean ‘ss’?
  135 |   decltype(cs) cs;
      |            ^~
      |            ss
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:136:12: error: ‘d1’ was not declared in this scope
  136 |   decltype(d1) d1;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:136:12: error: ‘d1’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:137:12: error: ‘d2’ was not declared in this scope; did you mean ‘d1’?
  137 |   decltype(d2) d2;
      |            ^~
      |            d1
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:137:12: error: ‘d2’ was not declared in this scope; did you mean ‘d1’?
  137 |   decltype(d2) d2;
      |            ^~
      |            d1
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:138:12: error: ‘d3’ was not declared in this scope; did you mean ‘d2’?
  138 |   decltype(d3) d3;
      |            ^~
      |            d2
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:138:12: error: ‘d3’ was not declared in this scope; did you mean ‘d2’?
  138 |   decltype(d3) d3;
      |            ^~
      |            d2
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:139:12: error: ‘s’ was not declared in this scope; did you mean ‘cs’?
  139 |   decltype(s) s;
      |            ^
      |            cs
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:139:12: error: ‘s’ was not declared in this scope; did you mean ‘cs’?
  139 |   decltype(s) s;
      |            ^
      |            cs
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:140:12: error: ‘i’ was not declared in this scope
  140 |   decltype(i) i;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:140:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:305:13: error: redefinition of ‘void __json(const CatalogSale&)’
  305 | inline void __json(const CatalogSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:155:13: note: ‘void __json(const CatalogSale&)’ previously defined here
  155 | inline void __json(const CatalogSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:330:13: error: redefinition of ‘void __json(const DateDim&)’
  330 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:180:13: note: ‘void __json(const DateDim&)’ previously defined here
  180 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:390:13: error: redefinition of ‘void __json(const Item&)’
  390 | inline void __json(const Item &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:200:13: note: ‘void __json(const Item&)’ previously defined here
  200 | inline void __json(const Item &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:435:13: error: redefinition of ‘void __json(const Store&)’
  435 | inline void __json(const Store &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:220:13: note: ‘void __json(const Store&)’ previously defined here
  220 | inline void __json(const Store &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:455:13: error: redefinition of ‘void __json(const StoreReturn&)’
  455 | inline void __json(const StoreReturn &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:240:13: note: ‘void __json(const StoreReturn&)’ previously defined here
  240 | inline void __json(const StoreReturn &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:485:13: error: redefinition of ‘void __json(const StoreSale&)’
  485 | inline void __json(const StoreSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:270:13: note: ‘void __json(const StoreSale&)’ previously defined here
  270 | inline void __json(const StoreSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:611:43: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
  611 |                     auto __key = Result{i.i_item_id, i.i_item_desc,
      |                                         ~~^~~~~~~~~
      |                                           |
      |                                           std::string {aka std::__cxx11::basic_string<char>}
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:617:39: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  617 |                             __struct8{ss, sr, cs, d1, d2, d3, s, i});
      |                                       ^~
      |                                       |
      |                                       StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:625:48: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  625 |                                                ss, sr, cs, d1, d2, d3, s, i}}});
      |                                                ^~
      |                                                |
      |                                                StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:625:77: error: no matching function for call to ‘std::vector<__struct8>::vector(<brace-enclosed initializer list>)’
  625 |                                                ss, sr, cs, d1, d2, d3, s, i}}});
      |                                                                             ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:7:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; std::__type_identity_t<_Alloc> = std::allocator<__struct8>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; std::__type_identity_t<_Alloc> = std::allocator<__struct8>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; size_type = long unsigned int; value_type = std::vector<__struct8>::value_type; allocator_type = std::allocator<__struct8>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; size_type = long unsigned int; allocator_type = std::allocator<__struct8>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct8; _Alloc = std::allocator<__struct8>; allocator_type = std::allocator<__struct8>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct8; _Alloc = std::allocator<__struct8>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:641:64: error: ‘struct __struct8’ has no member named ‘ss_net_profit’
  641 |                 std::vector<decltype(std::declval<__struct8>().ss_net_profit)>
      |                                                                ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:641:64: error: ‘struct __struct8’ has no member named ‘ss_net_profit’
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:641:78: error: template argument 1 is invalid
  641 |                 std::vector<decltype(std::declval<__struct8>().ss_net_profit)>
      |                                                                              ^
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:641:78: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:644:27: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  644 |                   __items.push_back(x.ss_net_profit);
      |                           ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:644:39: error: ‘struct __struct8’ has no member named ‘ss_net_profit’
  644 |                   __items.push_back(x.ss_net_profit);
      |                                       ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:639:77:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:639:51: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  639 |           ([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                 ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:639:62: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  639 |           ([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                            ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:650:64: error: ‘struct __struct8’ has no member named ‘sr_net_loss’
  650 |                 std::vector<decltype(std::declval<__struct8>().sr_net_loss)>
      |                                                                ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:650:64: error: ‘struct __struct8’ has no member named ‘sr_net_loss’
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:650:76: error: template argument 1 is invalid
  650 |                 std::vector<decltype(std::declval<__struct8>().sr_net_loss)>
      |                                                                            ^
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:650:76: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:653:27: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  653 |                   __items.push_back(x.sr_net_loss);
      |                           ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:653:39: error: ‘struct __struct8’ has no member named ‘sr_net_loss’
  653 |                   __items.push_back(x.sr_net_loss);
      |                                       ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:648:77:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:648:51: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  648 |           ([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                 ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:648:62: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  648 |           ([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                            ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:659:64: error: ‘struct __struct8’ has no member named ‘cs_net_profit’
  659 |                 std::vector<decltype(std::declval<__struct8>().cs_net_profit)>
      |                                                                ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:659:64: error: ‘struct __struct8’ has no member named ‘cs_net_profit’
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:659:78: error: template argument 1 is invalid
  659 |                 std::vector<decltype(std::declval<__struct8>().cs_net_profit)>
      |                                                                              ^
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:659:78: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:662:27: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  662 |                   __items.push_back(x.cs_net_profit);
      |                           ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:662:39: error: ‘struct __struct8’ has no member named ‘cs_net_profit’
  662 |                   __items.push_back(x.cs_net_profit);
      |                                       ^~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:3)> [with auto:3 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:657:77:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:657:51: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  657 |           ([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                 ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:657:62: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  657 |           ([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |                                                            ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq253623784142/001/prog.cpp:668:5: error: conversion from ‘vector<__struct10>’ to non-scalar type ‘vector<__struct8>’ requested
  579 |   std::vector<__struct8> result = ([&]() {
      |                                   ~~~~~~~~
  580 |     std::vector<__struct9> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  581 |     for (auto ss : store_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  582 |       for (auto sr : store_returns) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  583 |         if (!(((ss.ss_ticket_number == sr.sr_ticket_number) &&
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  584 |                (ss.ss_item_sk == sr.sr_item_sk))))
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  585 |           continue;
      |           ~~~~~~~~~
  586 |         for (auto cs : catalog_sales) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  587 |           if (!(((sr.sr_customer_sk == cs.cs_bill_customer_sk) &&
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  588 |                  (sr.sr_item_sk == cs.cs_item_sk))))
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  589 |             continue;
      |             ~~~~~~~~~
  590 |           for (auto d1 : date_dim) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~
  591 |             if (!((d1.d_date_sk == ss.ss_sold_date_sk)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  592 |               continue;
      |               ~~~~~~~~~
  593 |             for (auto d2 : date_dim) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~
  594 |               if (!((d2.d_date_sk == sr.sr_returned_date_sk)))
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  595 |                 continue;
      |                 ~~~~~~~~~
  596 |               for (auto d3 : date_dim) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~
  597 |                 if (!((d3.d_date_sk == cs.cs_sold_date_sk)))
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  598 |                   continue;
      |                   ~~~~~~~~~
  599 |                 for (auto s : store) {
      |                 ~~~~~~~~~~~~~~~~~~~~~~
  600 |                   if (!((s.s_store_sk == ss.ss_store_sk)))
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  601 |                     continue;
      |                     ~~~~~~~~~
  602 |                   for (auto i : item) {
      |                   ~~~~~~~~~~~~~~~~~~~~~
  603 |                     if (!((i.i_item_sk == ss.ss_item_sk)))
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  604 |                       continue;
      |                       ~~~~~~~~~
  605 |                     if (!(((((((d1.d_moy == 4) && (d1.d_year == 2000)) &&
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  606 |                               (d2.d_moy >= 4)) &&
      |                               ~~~~~~~~~~~~~~~~~~~
  607 |                              (d2.d_moy <= 10)) &&
      |                              ~~~~~~~~~~~~~~~~~~~~
  608 |                             (d3.d_moy >= 4)) &&
      |                             ~~~~~~~~~~~~~~~~~~~
  609 |                            (d3.d_moy <= 10))))
      |                            ~~~~~~~~~~~~~~~~~~~
  610 |                       continue;
      |                       ~~~~~~~~~
  611 |                     auto __key = Result{i.i_item_id, i.i_item_desc,
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  612 |                                         s.s_store_id, s.s_store_name};
      |                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  613 |                     bool __found = false;
      |                     ~~~~~~~~~~~~~~~~~~~~~
  614 |                     for (auto &__g : __groups) {
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  615 |                       if (__g.key == __key) {
      |                       ~~~~~~~~~~~~~~~~~~~~~~~
  616 |                         __g.items.push_back(
      |                         ~~~~~~~~~~~~~~~~~~~~
  617 |                             __struct8{ss, sr, cs, d1, d2, d3, s, i});
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  618 |                         __found = true;
      |                         ~~~~~~~~~~~~~~~
  619 |                         break;
      |                         ~~~~~~
  620 |                       }
      |                       ~
  621 |                     }
      |                     ~
  622 |                     if (!__found) {
      |                     ~~~~~~~~~~~~~~~
  623 |                       __groups.push_back(
      |                       ~~~~~~~~~~~~~~~~~~~
  624 |                           __struct9{__key, std::vector<__struct8>{__struct8{
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  625 |                                                ss, sr, cs, d1, d2, d3, s, i}}});
      |                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  626 |                     }
      |                     ~
  627 |                   }
      |                   ~
  628 |                 }
      |                 ~
  629 |               }
      |               ~
  630 |             }
      |             ~
  631 |           }
      |           ~
  632 |         }
      |         ~
  633 |       }
      |       ~
  634 |     }
      |     ~
  635 |     std::vector<__struct10> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  636 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  637 |       __items.push_back(__struct10{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  638 |           g.key.item_id, g.key.item_desc, g.key.s_store_id, g.key.s_store_name,
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  639 |           ([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  640 |               ([&]() {
      |               ~~~~~~~~
  641 |                 std::vector<decltype(std::declval<__struct8>().ss_net_profit)>
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  642 |                     __items;
      |                     ~~~~~~~~
  643 |                 for (auto x : g.items) {
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~
  644 |                   __items.push_back(x.ss_net_profit);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  645 |                 }
      |                 ~
  646 |                 return __items;
      |                 ~~~~~~~~~~~~~~~
  647 |               })()),
      |               ~~~~~~
  648 |           ([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  649 |               ([&]() {
      |               ~~~~~~~~
  650 |                 std::vector<decltype(std::declval<__struct8>().sr_net_loss)>
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  651 |                     __items;
      |                     ~~~~~~~~
  652 |                 for (auto x : g.items) {
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~
  653 |                   __items.push_back(x.sr_net_loss);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  654 |                 }
      |                 ~
  655 |                 return __items;
      |                 ~~~~~~~~~~~~~~~
  656 |               })()),
      |               ~~~~~~
  657 |           ([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  658 |               ([&]() {
      |               ~~~~~~~~
  659 |                 std::vector<decltype(std::declval<__struct8>().cs_net_profit)>
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  660 |                     __items;
      |                     ~~~~~~~~
  661 |                 for (auto x : g.items) {
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~
  662 |                   __items.push_back(x.cs_net_profit);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  663 |                 }
      |                 ~
  664 |                 return __items;
      |                 ~~~~~~~~~~~~~~~
  665 |               })())});
      |               ~~~~~~~~
  666 |     }
      |     ~
  667 |     return __items;
      |     ~~~~~~~~~~~~~~~
  668 |   })();
      |   ~~^~
